<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/xml_ActivitySignIn"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SignInActivity">

    <!-- FillMySeat -->
    <TextView
            android:id="@+id/tv_title"
            android:text="FillMySeat"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText"/>

    <!-- E-mail. -->
    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:focusableInTouchMode="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:hint="@string/et_email"
                android:drawableEnd="@drawable/ic_email"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Password. -->
    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:focusableInTouchMode="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:hint="@string/et_password"
                android:drawableEnd="@drawable/ic_pass"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Forgot password? -->
    <TextView
            android:id="@+id/tv_forgotPass"
            android:text="@string/tv_forgotPass"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <!-- Button Sign In. -->
    <Button
            android:id="@+id/bt_login"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/bt_login"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <!-- New hre? Sign Up. -->
    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent" android:layout_height="wrap_content">

        <TextView
                android:text="@string/tv_newHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText"/>

        <TextView
                android:id="@+id/tv_register"
                android:text="@string/tv_Register"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>