<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.EventNameFragment">

    <!-- Event Name. -->
    <TextView
            android:id="@+id/tv_titleEventName"
            android:text="@string/tv_titleEventName"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <!-- Description. -->
    <TextView
            android:id="@+id/tv_eventNameDesc"
            android:text="@string/tv_eventNameDesc"
            android:textSize="16sp"
            android:textColor="@color/colorDoveGray"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <!-- Event Name Field. -->
    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_firstName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:focusableInTouchMode="true"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_firstName"
                android:hint="@string/et_firstName"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>


</LinearLayout>