<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/main_fragmentEventParticipants"
              tools:context=".fragments.EventParticipantsFragment">

    <!-- Event Participants. -->
    <TextView
            android:id="@+id/tv_titleEventParticipants"
            android:text="@string/tv_titleEventParticipants"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <!-- Description. -->
    <TextView
            android:id="@+id/tv_eventParticipantsDesc"
            android:text="@string/tv_eventParticipantsDesc"
            android:textSize="16sp"
            android:textColor="@color/colorDoveGray"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <!-- Search Bar. -->
    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_search"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:focusableInTouchMode="true"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_search"
                android:hint="@string/et_search"
                android:drawableEnd="@drawable/ic_search"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <!-- RecyclerView. -->
    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_participants"
            android:layout_marginTop="30dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


</LinearLayout>